--- a/Week_4_Classification/Classification.Rmd
+++ b/Week_4_Classification/Classification.Rmd
@@ -31,10 +31,10 @@ library(pROC)
 # set your working directory to the current file directory 
 setwd(dirname(rstudioapi::getActiveDocumentContext()$path))
 
-heart <- read_csv("Heart.csv")
+heart <- read_csv("~/ISQA_8080/Week_4_Classification/Heart.csv")
 # note that the first column is only the observation index. we can delete this
 heart <- heart %>% select(-c(1))
-
+head(heart)
 names(heart)
 dim(heart)
 
@@ -49,7 +49,7 @@ heart <- heart %>% mutate_at(c("Sex","Fbs","RestECG","ExAng","Slope","Ca"), as.f
 
 # also, make sure character vectors are converted to factors
 heart <- heart %>% mutate_if(is.character, as.factor)
-
+head(heart)
 dataset <- heart
 
 # then, let's calculate the correlation between the variables
@@ -59,6 +59,7 @@ cor(dataset_numeric)
 
 # we can also identify correlated predictors easily (again using the caret package)
 (high_correlation <- findCorrelation(cor(dataset_numeric), cutoff = 0.7))
+
 
 ##### Logistic Regression #####
 
@@ -102,7 +103,7 @@ dataset$Ca <- addNA(dataset$Ca, ifany = TRUE)
 # as we need to do this every time we read in the dataset, let's use the preparation function for the heart.csv dataset provided in the Utils.R script
 
 source("./Utils.R") # load the functions provided in Utils.R
-heart <- read_csv("Heart.csv")
+heart <- read_csv("~/ISQA_8080/Week_4_Classification/Heart.csv")
 dataset <- prepare_heart(heart) 
 
 # re-run, now with the full model (no NA values)
