--- a/Assignments/Assignment_3/Troudt_A3_ISQA_8080.Rmd
+++ b/Assignments/Assignment_3/Troudt_A3_ISQA_8080.Rmd
@@ -67,6 +67,7 @@ summary(census_data_bagImputed)
 
 library(rpart)
 library(rpart.plot)
+library(pROC)
 
 # set-up model params
 target_var <- 'Income'
@@ -92,10 +93,83 @@ trControl <- trainControl(method = 'cv', number = 10, savePredictions = TRUE, cl
 # cp = 0 --> no pruning
 tGrid <- expand.grid(cp=c(0.0))
 
-tree_census <- train(as.formula(model_form), data = census_data_train, method = model_type, trControl = trControl, metric = 'Accuracy', tuneGrid = tGrid)
+tree_census <- train(as.formula(model_form), data = census_data_train, method = model_type, trControl = trControl, metric = 'ROC', tuneGrid = tGrid)
+
 
 rpart.plot(tree_census$finalModel, type = 1, extra = 1, under = TRUE)
 
+```
+
+**c. - d.**
+
+###__Training data Confusion Matrix/Statistics/ROC__
+
+```{r Part 1 training data stats, echo=FALSE, warning=FALSE, message=FALSE}
+
+# get training data predictions
+tree_census_training_predictions <- tree_census$pred
+
+# evaluate performance
+confusionMatrix(tree_census_training_predictions$pred, tree_census_training_predictions$obs)
+
+roc(tree_census_training_predictions$obs, tree_census_training_predictions$Yes, plot = TRUE, print.auc = TRUE, legacy.axes = TRUE, levels = c(negative_class, positive_class))$auc
 
 ```
+
+###__Test data Confusion Matrix/Statistics/ROC__
+
+```{r Part 1 test data prediction stats, echo=FALSE, warning=FALSE, message=FALSE}
+# predict performance on test data
+tree_census_pred_raw <- tree_census %>% predict(newdata = census_data_test, type = 'raw')
+tree_census_pred_probs <- tree_census %>% predict(newdata = census_data_test, type = 'prob')
+
+# evaluate performance
+confusionMatrix(tree_census_pred_raw, census_data_test[[target_var]], positive = positive_class)
+
+roc(census_data_test[[target_var]], tree_census_pred_probs[ , positive_class], plot = TRUE, print.auc = TRUE, legacy.axes = TRUE, levels = c(negative_class, positive_class))$auc
+
+```
+**e.** Compared with the non-pruned tree above, the pruned tree (below) displayed increases in both sensitivity and specificity between the training and test data-sets respectively. Additionally, the pruned tree also exhibited an increase in accuracy for the test data, which when taken altogether suggests that the pruned tree was able to reduce variance/over-fitting. 
+
+```{r Part 1 tree pruning, echo=FALSE, warning=FALSE, message=FALSE}
+# reset trainControl for random level selection during parameter tuning
+trControl <- trainControl(method = 'cv', number = 10, savePredictions = TRUE, classProbs = TRUE, search = 'random')
+
+census_tree_prune <- train(as.formula(model_form), data = census_data_train, method = model_type, trControl = trControl, metric = 'ROC', tuneLength = 10)
+
+# plot pruned tree
+rpart.plot(census_tree_prune$finalModel, type = 1, extra = 1, under = TRUE, cex = 0.7)
+
+```
+
+
+###__ Pruned tree Training data Confusion Matrix/Statistics/ROC__
+
+```{r Part 1 pruned tree training data stats, echo=FALSE, warning=FALSE, message=FALSE}
+
+# get training data predictions
+census_tree_prune_training_predictions <- census_tree_prune$pred
+
+# evaluate performance
+confusionMatrix(census_tree_prune_training_predictions$pred, census_tree_prune_training_predictions$obs)
+
+roc(census_tree_prune_training_predictions$obs, census_tree_prune_training_predictions$Yes, plot = TRUE, print.auc = TRUE, legacy.axes = TRUE, levels = c(negative_class, positive_class))$auc
+
+```
+
+
+###__Pruned tree Test data Confusion Matrix/Statistics/ROC__
+
+```{r Part 1 Pruned tree test data prediction stats, echo=FALSE, warning=FALSE, message=FALSE}
+# predict performance on test data
+census_pruned_tree_pred_raw <- census_tree_prune %>% predict(newdata = census_data_test, type = 'raw')
+census_pruned_tree_pred_probs <- census_tree_prune %>% predict(newdata = census_data_test, type = 'prob')
+
+# evaluate performance
+confusionMatrix(census_pruned_tree_pred_raw, census_data_test[[target_var]], positive = positive_class)
+
+roc(census_data_test[[target_var]], census_pruned_tree_pred_probs[ , positive_class], plot = TRUE, print.auc = TRUE, legacy.axes = TRUE, levels = c(negative_class, positive_class))$auc
+
+```
+
 
